--- a/package.json
+++ b/package.json
@@ -3,41 +3,53 @@
 	"version": "0.1.0",
 	"private": true,
 	"homepage": "https://andrewkaplenkov.github.io/gb_react/",
-	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.2.0",
-		"@testing-library/user-event": "^13.5.0",
-		"gh-pages": "^4.0.0",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-scripts": "5.0.1",
-		"serve": "^13.0.2",
-		"web-vitals": "^2.1.4"
-	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"pre-deploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"start": "webpack serve --mode=development --open",
+		"build": "webpack --mode=production",
+		"report": "npm run build --withReport true",
+		"lint": "npx eslint --ext .js,.jsx --fix ./",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"prepare": "husky install",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook"
 	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+	"devDependencies": {
+		"@babel/core": "^7.18.2",
+		"@babel/preset-env": "^7.18.2",
+		"@babel/preset-react": "^7.17.12",
+		"@storybook/addon-actions": "^6.5.5",
+		"@storybook/addon-essentials": "^6.5.5",
+		"@storybook/addon-interactions": "^6.5.5",
+		"@storybook/addon-links": "^6.5.5",
+		"@storybook/builder-webpack5": "^6.5.5",
+		"@storybook/manager-webpack5": "^6.5.5",
+		"@storybook/react": "^6.5.5",
+		"@storybook/testing-library": "^0.0.11",
+		"babel-loader": "^8.2.5",
+		"css-loader": "^6.7.1",
+		"css-minimizer-webpack-plugin": "^4.0.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.30.0",
+		"eslint-plugin-react-hooks": "^4.5.0",
+		"eslint-plugin-storybook": "^0.5.12",
+		"html-webpack-plugin": "^5.5.0",
+		"husky": "^8.0.1",
+		"mini-css-extract-plugin": "^2.6.0",
+		"prettier": "^2.6.2",
+		"sass": "^1.52.1",
+		"sass-loader": "^13.0.0",
+		"style-loader": "^3.3.1",
+		"webpack": "^5.72.1",
+		"webpack-bundle-analyzer": "^4.5.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-dev-server": "^4.9.0"
 	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"dependencies": {
+		"@babel/plugin-transform-runtime": "^7.18.2",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0"
 	}
 }
