--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@babel/plugin-transform-runtime": "^7.18.2",
+		"gh-pages": "^4.0.0",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0"
 	}
