--- a/.github/workflows/codesandbox-link-comment.yml
+++ b/.github/workflows/codesandbox-link-comment.yml
@@ -9,9 +9,7 @@ on:
 
 jobs:
   codesandbox-comment:
-    permissions:
-      actions: write
-      pull-requests: write
+    permissions: write-all
     name: Add codesandbox link comment
     runs-on: ubuntu-latest
     steps:
