--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "webpack serve --mode=development --open",
 		"build": "webpack --mode=production",
 		"report": "npm run build --withReport true",
-		"lint": "npx eslint --ext .js,.jsx --fix ./",
+		"lint": "npx tsc --noEmit && npx eslint --ext .js,.jsx,.ts,.tsx --fix ./",
 		"predeploy": "npm run build",
 		"deploy:web": "npm run build && gh-pages -d build",
 		"deploy:storybook": "npm run build-storybook && gh-pages -d storybook-static",
@@ -21,7 +21,8 @@
 		"test:coverage": "jest --coverage --colors",
 		"loki:update": "npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
 		"loki:approve": "loki approve",
-		"loki:test": "npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static"
+		"loki:test": "npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static",
+		"chromatic": "npx chromatic --project-token=4b9b1cdcda84"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.2",
@@ -38,8 +39,11 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^14.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
 		"babel-jest": "^28.1.0",
 		"babel-loader": "^8.2.5",
+		"chromatic": "^6.5.6",
 		"css-loader": "^6.7.1",
 		"css-minimizer-webpack-plugin": "^4.0.0",
 		"eslint": "^8.16.0",
@@ -59,6 +63,7 @@
 		"sass": "^1.52.1",
 		"sass-loader": "^13.0.0",
 		"style-loader": "^3.3.1",
+		"typescript": "^4.7.2",
 		"webpack": "^5.72.1",
 		"webpack-bundle-analyzer": "^4.5.0",
 		"webpack-cli": "^4.9.2",
@@ -69,7 +74,16 @@
 		"gh-pages": "^4.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"react": "^18.1.0",
-		"react-dom": "^18.1.0"
+		"react-dom": "^18.1.0",
+		"@babel/preset-typescript": "^7.17.12",
+		"@emotion/react": "^11.9.0",
+		"@emotion/styled": "^11.8.1",
+		"@mui/material": "^5.8.2",
+		"@mui/styled-engine-sc": "^5.8.0",
+		"nanoid": "^3.3.4",
+		"prop-types": "^15.8.1",
+		"react-router-dom": "^6.3.0",
+		"styled-components": "^5.3.5"
 	},
 	"loki": {
 		"configurations": {
