--- a/package.json
+++ b/package.json
@@ -71,17 +71,18 @@
 	},
 	"dependencies": {
 		"@babel/plugin-transform-runtime": "^7.18.2",
-		"gh-pages": "^4.0.0",
-		"identity-obj-proxy": "^3.0.0",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
 		"@babel/preset-typescript": "^7.17.12",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.8.3",
 		"@mui/material": "^5.8.2",
 		"@mui/styled-engine-sc": "^5.8.0",
+		"gh-pages": "^4.0.0",
+		"identity-obj-proxy": "^3.0.0",
 		"nanoid": "^3.3.4",
 		"prop-types": "^15.8.1",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"styled-components": "^5.3.5"
 	},
