--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"@babel/preset-typescript": "^7.17.12",
 		"@emotion/react": "^11.9.0",
 		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.8.3",
 		"@mui/material": "^5.8.2",
 		"@mui/styled-engine-sc": "^5.8.0",
 		"identity-obj-proxy": "^3.0.0",
