--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
 		"prop-types": "^15.8.1",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
+		"redux": "^4.2.0",
 		"styled-components": "^5.3.5"
 	},
 	"loki": {
