--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"@mui/icons-material": "^5.8.3",
 		"@mui/material": "^5.8.2",
 		"@mui/styled-engine-sc": "^5.8.0",
+		"gh-pages": "^4.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"nanoid": "^3.3.4",
 		"prop-types": "^15.8.1",
