--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"@mui/icons-material": "^5.8.3",
 		"@mui/material": "^5.8.2",
 		"@mui/styled-engine-sc": "^5.8.0",
+		"@reduxjs/toolkit": "^1.8.2",
 		"gh-pages": "^4.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"nanoid": "^3.3.4",
@@ -86,6 +87,8 @@
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.4.1",
 		"styled-components": "^5.3.5"
 	},
 	"loki": {
