--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"@mui/material": "^5.8.2",
 		"@mui/styled-engine-sc": "^5.8.0",
 		"@reduxjs/toolkit": "^1.8.2",
+		"firebase": "^9.8.4",
 		"gh-pages": "^4.0.0",
 		"identity-obj-proxy": "^3.0.0",
 		"nanoid": "^3.3.4",
